--- a/templates/catalog.html.twig
+++ b/templates/catalog.html.twig
@@ -34,7 +34,7 @@
             </div>
         </div>
         <div class="row d-flex justify-content-around">
-            <div class="col-sm-12 col-lg-4">
+            <div class="col-sm-12 col-md-4 col-lg-4">
                 <div class="col-md-12 col-lg-12 white">
                     <div class="col-md-12 col-lg-12 center">
                         <h1>Basic</h1>
@@ -74,7 +74,7 @@
                     </div>
                 </div>
             </div>
-            <div class="col-sm-12 col-lg-4">
+            <div class="col-sm-12 col-md-4 col-lg-4">
                 <div class="col-md-12 col-lg-12 white">
                     <div class="col-md-12 col-lg-12 center">
                         <h1>Premium</h1>
@@ -115,7 +115,7 @@
                 </div>
             </div>
 
-            <div class="col-sm-12 col-lg-4">
+            <div class="col-sm-12 col-md-4 col-lg-4">
                 <div class="col-md-12 col-lg-12 white">
                     <div class="col-md-12 col-lg-12 center">
                         <h1>Sur-mesure</h1>
