--- a/templates/blog.html.twig
+++ b/templates/blog.html.twig
@@ -5,7 +5,7 @@
 {% endblock %}
 
 {% block body %}
-    <div class="container-fluid  page-content">
+    <div class="container-fluid page-content">
         <header>
             <div class="row justify-content-around margin-auto">
                 <div class="col-xs-12 col-lg-5 justify-content-around">
@@ -23,15 +23,15 @@
                     </div>
                 </div>
                 <div class="col-lg-5 d-none d-lg-block">
-                    <img src="{{ asset('images/home-intro.jpg') }}" class="img-fluid ">
+                    <img src="{{ asset('images/home-intro.jpg') }}" class="img-fluid img-round">
                 </div>
             </div>
         </header>
 
         <div class="row block">
-            <div class="row d-flex justify-content-around display-small">
+            <div class="row d-flex justify-content-around">
                 {% for article in articles %}
-                    <div class="col-lg-4 no-padding shadow-sm p-0 mb-0 bg-white rounded white block-decal thumbnail">
+                    <div class="col-lg-4 col-md-4 col-sm-6 col-10 no-padding shadow-sm p-0 mb-0 bg-white rounded white block-decal thumbnail">
                         <img src="{{ asset('images/home/projet1.jpg') }}" class="img-fluid" alt="" height="180"
                              width="100%">
                         <h5>Ecrit par {{ article.author.firstname }} le {{ article.date|date('d.m.Y') }}</h5>
