--- a/templates/home.html.twig
+++ b/templates/home.html.twig
@@ -26,7 +26,7 @@
                     </div>
                     <div class="row justify-content-around">
                         <a>
-                            <button>Button</button>
+                            <button class="mt-0">Button</button>
                         </a>
                     </div>
                 </div>
