--- a/templates/propos.html.twig
+++ b/templates/propos.html.twig
@@ -19,7 +19,7 @@
                     </div>
                     <div class="row justify-content-around">
                         <a>
-                            <button>Button</button>
+                            <button class="mt-0">Button</button>
                         </a>
                     </div>
                 </div>
