--- a/public/CSS/base.css
+++ b/public/CSS/base.css
@@ -244,6 +244,7 @@ img.h1 {
     width: 100px;
 }
 
+
 /* Buttons */
 
 button:not(.navbar-toggler) {
@@ -449,10 +450,66 @@ footer nav a:hover {
         padding-right: 0;
         padding-left: 0;
     }
+
 }
 
 @media screen and (max-width: 1282px) {
     .nav-link {
         margin-right: 15px;
     }
+
+}
+
+@media screen and (min-width: 200px) {
+    .background_article{
+        background-image: url("../images/article-fili-578.jpg");
+        background-repeat: no-repeat;
+        background-size: cover;
+        filter:alpha(opacity=50);
+        opacity: 0.2;
+        -moz-opacity:0.5;
+        padding-top: 15em;
+        position: relative;
+        bottom:150px;
+    }
+    .title_article{
+        position: relative;
+        bottom: 500px;
+        height: 10px;
+        margin-bottom: 0px;
+    }
+    .title_article h2{
+        margin-bottom: 0px;
+    }
+
+}
+@media screen and (min-width: 760px) {
+    .background_article{
+        background-image: url("../images/article-fili-990.jpg");
+        background-repeat: no-repeat;
+        background-size: cover;
+        filter:alpha(opacity=50);
+        opacity: 0.2;
+        -moz-opacity:0.5;
+        padding-top: 25em;
+        position: relative;
+        bottom:150px;
+    }
+
+}
+
+@media screen and (min-width: 991px) {
+    .background_article{
+        background-image: url("../images/article-fili-1980.jpg");
+        background-repeat: no-repeat;
+        background-size: cover;
+        filter:alpha(opacity=50);
+        opacity: 0.2;
+        -moz-opacity:0.5;
+        padding-top: 40em;
+        position: relative;
+        bottom:150px;
+        margin-right: 0;
+    }
+
 }
