--- a/templates/article.html.twig
+++ b/templates/article.html.twig
@@ -6,20 +6,26 @@
 
 {% block body %}
     <div class="container-fluid">
-        <div class="row">
+        <div class="row background_article col-12 col-lg-12 mr-0">
+        </div>
+        <div class="row offset-1 col-10 title_article">
             <div class="col-lg-12">
                 <h1>{{ article.title }}</h1>
             </div>
             <div class="col-lg-12">
-                <h2>Ecrit par {{ article.author.firstname }}
-                    le {{ article.date | date('d F Y') }}</h2>
+                <h2>Ecrit par {{ article.author.firstname }}</h2>
+                <h2>le {{ article.date | date('d F Y') }}</h2>
             </div>
         </div>
         <div class="row">
-            <p>{{ article.content }}</p>
+            <div class="offset-2 col-8">
+                <p class="text-justify">{{ article.content }}</p>
+
+            </div>
+            <div class="offset-2 col-8 text-center">
+                <a href="{{ path('blog_page') }}"><button>Blog</button></a>
+            </div>
         </div>
-        <div class="row">
-            <a href="{{ path('blog_page') }}"><button>Blog</button></a>
-        </div>
+    </div>
     </div>
 {% endblock %}
